--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -3,11 +3,10 @@ server:
   port: 8888
 
 spring:
-  profiles:
-    active: native
   cloud:
     config:
       server:
-        native:
-          search-locations: c:/alura-microservico-repo
+        git:
+          uri: https://github.com/Michael-Silva-de-Sousa/microservico-repo
+          search-paths: fornecedor
 
