--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -8,5 +8,5 @@ spring:
       server:
         git:
           uri: https://github.com/Michael-Silva-de-Sousa/microservico-repo
-          search-paths: fornecedor
+          search-paths: fornecedor, loja, transportador
 
